--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "firebase": "^11.6.1",
+    "framer-motion": "^12.9.7",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "sass": "^1.87.0"
