--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^9.0.2",
 		"next": "15.3.1",
+		"node-fetch": "^3.3.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hot-toast": "^2.5.2",
