--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@tailwindcss/typography": "^0.5.16",
 		"axios": "^1.9.0",
 		"bcryptjs": "^3.0.2",
+		"chart.js": "^4.4.9",
 		"date-fns": "^4.1.0",
 		"dotenv": "^16.5.0",
 		"firebase": "^11.7.1",
