--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@date-io/dayjs": "^3.2.0",
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
+		"@hookform/resolvers": "^5.0.1",
+		"@mui/icons-material": "^7.1.0",
+		"@mui/material": "^7.1.0",
+		"@mui/x-date-pickers": "^8.3.0",
 		"@reduxjs/toolkit": "^2.8.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
@@ -16,20 +23,26 @@
 		"bcryptjs": "^3.0.2",
 		"chart.js": "^4.4.9",
 		"date-fns": "^4.1.0",
+		"dayjs": "^1.11.13",
 		"dotenv": "^16.5.0",
 		"firebase": "^11.7.1",
 		"framer-motion": "^12.10.5",
 		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^9.0.2",
+		"lucide-react": "^0.510.0",
 		"next": "^15.3.1",
 		"node-fetch": "^3.3.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.56.3",
 		"react-hot-toast": "^2.5.2",
 		"react-icons": "^5.5.0",
 		"react-redux": "^9.2.0",
 		"react-toastify": "^11.0.5",
-		"sass": "^1.87.0"
+		"sass": "^1.87.0",
+		"sonner": "^2.0.3",
+		"tailwind-merge": "^3.3.0",
+		"zod": "^3.24.4"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
