--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"dayjs": "^1.11.13",
 		"dotenv": "^16.5.0",
 		"firebase": "^11.7.1",
+		"formik": "^2.4.6",
 		"framer-motion": "^12.10.5",
 		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^9.0.2",
@@ -43,6 +44,7 @@
 		"sass": "^1.87.0",
 		"sonner": "^2.0.3",
 		"tailwind-merge": "^3.3.0",
+		"yup": "^1.6.1",
 		"zod": "^3.24.4"
 	},
 	"devDependencies": {
