--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"next": "^15.3.1",
 		"node-fetch": "^3.3.2",
 		"react": "^19.0.0",
+		"react-chartjs-2": "^5.3.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.56.3",
 		"react-hot-toast": "^2.5.2",
