--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@mui/material": "^7.1.0",
 		"@mui/x-date-pickers": "^8.3.1",
 		"@reduxjs/toolkit": "^2.8.1",
+		"@stripe/react-stripe-js": "^2.9.0",
+		"@stripe/stripe-js": "^4.10.0",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
 		"axios": "^1.9.0",
@@ -40,19 +42,10 @@
 		"react-hot-toast": "^2.5.2",
 		"react-icons": "^5.5.0",
 		"react-redux": "^9.2.0",
-<<<<<<< Updated upstream
-		"react-toastify": "^11.0.5",
-		"recharts": "^2.15.3",
-		"sass": "^1.87.0",
-		"tailwind-merge": "^3.3.0",
-		"yup": "^1.6.1",
-		"zod": "^3.24.4"
-=======
 		"recharts": "^2.15.3",
 		"socket.io-client": "^4.8.1",
 		"tailwind-merge": "^3.3.0",
 		"yup": "^1.6.1"
->>>>>>> Stashed changes
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
