--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
 		"recharts": "^2.15.3",
 		"socket.io-client": "^4.8.1",
 		"tailwind-merge": "^3.3.0",
-		"yup": "^1.6.1"
+		"yup": "^1.6.1",
+		"@cloudinary/url-gen": "^1.20.0",
+		"@cloudinary/react": "^1.13.0"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
