--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@cloudinary/react": "^1.13.0",
+		"@cloudinary/url-gen": "^1.20.0",
 		"@date-io/dayjs": "^3.2.0",
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
@@ -17,7 +19,7 @@
 		"@mui/material": "^7.1.0",
 		"@mui/x-date-pickers": "^8.3.1",
 		"@reduxjs/toolkit": "^2.8.1",
-		"@stripe/react-stripe-js": "^2.9.0",
+		"@stripe/react-stripe-js": "^3.7.0",
 		"@stripe/stripe-js": "^4.10.0",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
@@ -32,12 +34,13 @@
 		"framer-motion": "^12.10.5",
 		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^9.0.2",
+		"lightningcss": "^1.30.1",
 		"lucide-react": "^0.510.0",
 		"next": "^15.3.1",
 		"node-fetch": "^3.3.2",
-		"react": "^19.0.0",
+		"react": "^18.3.1",
 		"react-chartjs-2": "^5.3.0",
-		"react-dom": "^19.0.0",
+		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.56.3",
 		"react-hot-toast": "^2.5.2",
 		"react-icons": "^5.5.0",
@@ -45,9 +48,7 @@
 		"recharts": "^2.15.3",
 		"socket.io-client": "^4.8.1",
 		"tailwind-merge": "^3.3.0",
-		"yup": "^1.6.1",
-		"@cloudinary/url-gen": "^1.20.0",
-		"@cloudinary/react": "^1.13.0"
+		"yup": "^1.6.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
