--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"react-hot-toast": "^2.5.2",
 		"react-icons": "^5.5.0",
 		"react-redux": "^9.2.0",
+		"react-toastify": "^11.0.5",
 		"recharts": "^2.15.3",
 		"socket.io-client": "^4.8.1",
 		"tailwind-merge": "^3.3.0",
