--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@mui/icons-material": "^7.1.0",
 		"@mui/material": "^7.1.0",
 		"@mui/x-date-pickers": "^8.3.1",
+		"@radix-ui/react-slot": "^1.2.3",
 		"@reduxjs/toolkit": "^2.8.1",
 		"@stripe/react-stripe-js": "^3.7.0",
 		"@stripe/stripe-js": "^4.10.0",
@@ -26,6 +27,7 @@
 		"axios": "^1.9.0",
 		"bcryptjs": "^3.0.2",
 		"chart.js": "^4.4.9",
+		"class-variance-authority": "^0.7.1",
 		"date-fns": "^4.1.0",
 		"dayjs": "^1.11.13",
 		"dotenv": "^16.5.0",
