--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@mui/x-date-pickers": "^8.3.1",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@reduxjs/toolkit": "^2.8.1",
+		"@stripe/react-stripe-js": "^3.7.0",
 		"@stripe/stripe-js": "^4.10.0",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
@@ -46,8 +47,11 @@
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
 		"@types/react": "^19",
+		"@tailwindcss/postcss": "^4.1.6",
 		"@types/react-redux": "^7.1.34",
-		"tailwindcss": "^4.1.6",
+		"autoprefixer": "^10.4.21",
+		"postcss": "^8.5.6",
+		"tailwindcss": "^4.1.11",
 		"typescript": "^5"
 	}
 }
